@@ -10,6 +10,6 @@ Package: profilematic
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Automatic Profile changer
- Changes phone's profile according to rules specified by user. At the moment supports rules based on time and day.
+ Changes phone's profile according to rules specified by user. At the moment supports rules based on location and time.
 XSBC-Maemo-Display-Name: ProfileMatic
 XB-Maemo-Icon-26: iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABHNCSVQICAgIfAhkiAAAAAlwSFlzAAALWwAAC1sB2zHRFAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAABIMSURBVHic1Zt5eJTVvcc/7zZ7MtmGbISwqAhuICoCioICIlwUtFZcsLbeW6uPiGhd8FoE1KqoaH1qbb1qxd4WpQgmFG1pFaqCKFVEQIKENQGyJ5PZ3nmXc/8IIGGGzEyA2/b7PO+TzFm/v+973nN+Z5M4wXhhhXBaXkY4JS5SZQYpMgFFwiNJeGQJFxJuSeBEwomEAwBBHIEuJHQEUVsQE4KIJYhYNg2mzQZd8LES5pO7r5T0E8lXOt4CFqwSw9wKN2kKZ2oK/SSJQstGNSyIW2DZIATYdPxNi5QE8sG/igwOBTQFFBlTCOoMi2rDYlPU4nf3XCqtPR7+3RLg2TXC7TS5x6dxiyRxatREMiwwrOOhkj60g4K4VYQQfBsyeENXWXDvcCmaaVkZCfDch+I8n8bDHo0xMQtvWAcrzbd6sqBI4HWCSyEcMVgZMnh85ihpfbr50xbgl6utZzwOcXdYl9So0T2yJxtuDbxOYUbi0gt3XqLcl06elALM/7PokeU2l4M4vy3jBvbPgd8NIH3eHlUn/nScVN9V2i4FmL/SmJDrtBa26+T9q771Y8GtQZaT5hZdmfbTMdqfjpXumAI89V5sUo7HWtIcRrXsk0PyZEORIc+L2RpRrnlgvKsiWZqkAjy9XBT5POHNLRGR9+9q/CEoMuR6pOZQxHvG/ROlA0fHq8kyuRztFcGIyDPMk0dMCJtwWyO+nB4nrxLAtiEYIc/jaK8ALjg6PqEFPLUi+KyKNbP1BHZ4lhnni5VvsvHv79DeUk8sHMSMtqG4s1GEhdefjy+3EH+glPzS0zh1yBiK+px14ggAOW4wUZ574Mrse48M7yTAY8vC5/kckbUNYSlpy8gUn1a8xIYPF9NStwt3QV+Kzr8RX8lZuHJ74corQ1Y0Gl4djWHEMYw4cSOOYRoE29tQVAenXTCeMy6aQq+BF54IOgS8wgzFPcP++2rvYT+hk6Gqqj/cFhWqdZzezeaP32HlwnlIzix6XnwHpw+agjOnNDGhbaJpDjTN0Sm4pKiMaDTMvk1/55s1FRSU9eeyaXMo6nv2cfFqi6I6nfrDwORDYYdbwD1vC3dPd31DXbvwdreC/dVfUfHL6YTbmjjl6qcpvvAWJEk+dgYhaHl9VJdlCiFobKqjoamO3mdezKU3zcYf6NldihRmSeGaaI/Agus63ObD7Pxq04ywbnpt26I7zxd/+S2/n3cd/gH/wYi5OygZdmvXxkPHbEdSUiSRCBQU0f+UM2mr+YY3HhrHzo2rusXRti3Cuun1q00zDpV/+BNwysYPmsM2djda/8rXHmLLmkoGTnuDwNlXZZZZVsBKPYtSFIXiwlJ8Hi/vPn87I66dyeCxt2bMtT0KeVnGD4Cfw8FP4MHFjUO9IrS2MSxlPDv845M3Ub+3ikF3vkdW2blp5bH0dvTWfeht+2h7/35UyULTnGiaAykNCroeZeeeHZx6wURGTZuTKWUKvEKEJd+wJ79XsE4FcArz5rBuS3aGTs+qN2dTt3crFzzwD1y5ZV2mDddtJbLlHfTdf6eoIIv+vXvRp1cJBTN+xK5du9i1azc7d+4mGAwibAW324eqaknLcjrdnNq3P9XrV5BTVM45l9+SEe+wjuR0mjcDHQJIGGfFDJtMBKhaW8GWNRWcc8efujQ+UldF8wezOatvLnfNuJHhwx9AUY747kXnStvb21mx4n3mz19Ae3s7Hre/c/qDUBSV8rK+rFv6AjnF/SgbMDxt7jEDXE7jLDj4Ccz+Q3VNfdAqTXfFprn2W955+mb6TniUnpfelTSNsC3qVz5CibSbF+bPpn//05IXJo6temXlcmbNmo1lyng8WUnThEJt7KndzZRZi/EHeqXFX5KgR7ZSO2dqv57S7LeFw4xVhRtCIm3nZ9GjE3EEzuDsH7+bNN6MBdn3x1uZ+aOr+PF/Tuu6sC4EANB1nRtumMbmzdvweXOTpqmv34fwBZg449W0+AMEfJKpuvp75Uj8wAjDtFTbtknn2bnhb4Ra6jl1ynNJC7biEWr/91peefqe1ManAafTyZIlbzF16hTC4ZbkxgSKaK75hpqtn6Zlg23bGKalRuIHRsgI/WLdSC+TbVl8vOgJCgdNxh3ol8hECPYv/S9efOp+Ro686LiNPxKzZz/CZZePJBptT4iTJJmiQAmfLn4a27LSskU3bBD6xbJkxgfF4jaWlfrZtq4SPdpOnwnzkpJs/PhZbrv2IsaNvbxT+I4dO3h32TLsTIeZo/Dii89TUlpANBpOiMvNLSAeaWHnVx+mZUssbiOZ8UGyLcyAYabnRW1Z/XtyT7kYV15iZxNvr8OxfzX33n17p3Bd1znzjIFMmTKZa66Zgki3pz0Iy7JYsGABo0ePZsuWLSxc+BqGGUmaNjc7h+rPK9OyxTAtbGEGZGFZHiMNxYy4TrDpAIFB1yStvHn1E/zi6UcSwoPB4OE3X/Huu8ydm77jsmHDBoYPH859993H6tWr2bhxI8XFxYwfP5ZwJJiQ3p+dy76qzzDiemp7LBthWR7ZxvJYVmrF9lV9im3EyB84PqFiM9pKjrmXoRcmrDcQCASYP/+Zw7/nzZ1LZUXS1anDiMVizJo1i6FDh7J+/Xq8Xi8LFizg+uuvB2Du3J8hRDwhn6Y5cLu9HNi+PqU9lmVhY3lkYVku00rdaWxfuxR3fi+c/uKEilu3/pmp1044pkF3TZ/OzdM6RgQhBNOm3czWrVuTpl21ahXnnHMOTz31FKZpMm7cOL7++mumT59+2E32+/0UFvbAshKXrLI8Xmo2rUppj9nRAlyybduudHrNYMNu/H2Se1vG9komX3XlMQUAePnlXzNkyBCg47OYMvlqgsHvmnFLSwu33XYbl112Gdu3b6egoICFCxeyYsUKysvLE8q74Ybrk3aGLpeH1v070h0OXbJpmq50ek092o4jJ/k8XIm3UFyc2DI6E3Ox5J2lBAIBAKqqqpg27WaEECxevJgzzjiD119/HYCpU6eyefNmbrzxxmOWN2rUJShKYoeqaRqx9oa0RgLTNF2qZZgO2049HbUtG0dWIGmcQ01vEllWVsZbby9m7JjLMU2TyooKBg4cyLZt2wDo1asXv/rVr7jiiitSllVaWpL0E9A0J7FwO+nYZBk4VMuynFaKtW/L1EECzZcogBltJS/Xn7KyQ7jkkkt45plnmTHjbgC2bduGLMvccccdPPbYY/h8vrSGSo/HQ0yPsn3HusRISSLS1ojTl9dlGZaF86AL3LValqEjSSqK5kmIs00dl9OZkvCRuGv6dDZv2cwrv/kNDlXirx+sYviIERmVAaB5cgicd1mnMGFbNKx/E1uktsu2QbVBt2070bIjIGtuhB0n1ro3kYQvQF1DY8bkX37511w12I218QUG9y/uODyQwXqMYRiYQkZ2dKZuxdqRZBXN7U/pedoouoyw4+n0mJIkEWvckVCIJMno8e4dDLhw9CQ8Dgjt+7IjIAMvcf/+A8iaO9EoIwySnNYogLDjMoJYOj2m5vIRqa9KSiYuNMLhxCEpFbJ6diyhte9Z/93bT1OEr77aSFzyJYRbegRZltMaBRDEZEuIWDq+szu7B9H67UnJaOWjWbnyg4wFUN05uAv6Edz7j46ADER4feEiDFfi0Btvq0FxuNKaD1hCxGQhpBgidXMJnD6SaGsNemttQqW+AZN48+3KjAUAyOo5hFDtl98FSBIgdSmCZVls2lKF4kpcJYo1VhM4ZVg6zR8hpJhs23bEtlM3l9zeQ5AUlfoNSxIqdef35pudDdTUJIqTUoCyIRiRZqJNO48QgS5FePW1N4iqSYbkSDPCNii74NqU9hwUIiJbQoqQRnORNTdOdzYHPnszKanskY8w88G53RIAIFT7ReeIY4ig6zrPLHgJ239KQlmxph3IioasuVPag21hCSkiC0EDpLciFBgwivCBKqJNu5IYci6bauJ8+ulnmQlQei5IUkdHeDSSiPCzRx8npPVEOmpHSVhxwjUbyO87NL0RABshaJAlRdugkN6KUEH/S5EUheqlyc8fFU54nh/c+TB799akLYDqzsGTf0RH2IUIS5YsY9G7HyLn9E1IFqr5EiQoG3ZjWrYo2EiKtkEWsusjRUqvBSBrlAy+iqatfyO4K9EFVd1+8ie8xKRrb6WpqSltEXw9z+3cESYRYd1nn3PPjJno7j4J0XY8QqR2Iz0GjAFZS8sWRbIRsusjWcR9nyiSbaa7uZh/+igkRabqrTuTcvX0OBXnJT9n5NjvsXVrcr/haCTtCI/AGwt/z3U3/YSQux9NXy/DDHX2PIPVq5EVheIhV6dlg21bKJJtirjvE2XL6pesASNv+HFrKJ5t2wIhUj3gyimlqepDhG2Qc8rIBMJOfwmOvmN45bGfIIs4QwafjSwfe6dYWHEOfL6QnH4X4S0ceDi8ubmZO+6cyauL3scuHIqWVYTq9tPyzfs4c0pRnD5Ce9YTbfiWshG34vSXpMFfAII8v2f/0idGze9gpTqrZdLfYvYWDyC374XsXvksdesXJTXK6S+h1y2V/M9HcQYPG89bb7+Dric/55xdfiGF507F2+N0ABoaGpj18KOcP3wc733Zih0YAge32l0F/cjpfznNmyoJ7V1PuOYL8voNI6tsUNr8ZSxQndVwcHtcVhxfK5I9Us9g1TowaDKxlj1sXXQ7ztye5PRL3AeQFI2CYbdjDZnGk8teY86z19KzRxZTJo6mT3kZJaWl+LOzqas7QG3W91nySiXLKu+gNWwQ0UpQCi9OeorLmdebnAHjaN3yHq7sAIXnfZ9MltwVtcNmONjHTpqzdmjzno1rG8OZnR0WlsHOFfOwzThn/nAReQPGpswTD+6nrXoNRGohtJ9o3WYiwWYMJQtTduPwlyDJqXbpBMHqj4jWb6Pv+IfRfPmZ0KbAi8jrdfawitnD1h02+IoZi6r21rWdlunxINuIsffDF4iHmikfez+9xz6UUf6Gr95h3z+WJF1sSQZhGbR+8x5mpJXe4+5D8xZkVJ8iQVmhf9v7z1/fH444IqN5cn/rzWxdAwBZc1E+5n6yew1m91/ns/HXVxFvr0s/v6yl3CA9hHhrDY1f/AGEzSlXzcvYeOg4Wa55cn97uP5D/7jys573utTM57QAkkTheddTOOgaWrd/xNpHT6N62YOYkeSbmZ2yKhoihQBWtI2WTZW0bHmP7PIh9Bk/C0lJfngiFbwuNezKz3r+0O/D/uSWv7xqDhz9w/Oj4fDpZje38Jw5peScNhJh6jRsXMaeVb/AjodQ3bk4s4uSrvjozbtp3f05iiu7U7iwTfTm3YT2rKN95xpcOcWUj7mXrJ6DukcOcKmQVxBY8e7sMb87FHbUOUH/49muhomxkN3tg5Ky4iBwztXknT6Gxq8rqP3oZfaufglZUcgfcAV5A6/A6S9C8wUON2E7HsEI1WPFQlh6kHjrXuJt+5BVB+68XpSMn4Uj6/iP1Ga7ZFNV/Y8fGZbwSiY8tPzZxgO1M0/k3QA9eIC26jWEajcgLBMhJISwEZaB6s7BCNWDrCIrKrKi4crvTV7/0cm34LsJvxsKikqf+9PPJx77qOwhXDnz7c/21becHzuJh6WteBgzGgRho3pyUBzdPp+ZEi4VSnrkfr7iuesSNi+TNnVvVvmkfD26+UBzLO9k3QlSHN6TavTheiTI97uavVnlk5LFJ3XQF88ZesBbUH5rvk82leO+WPfPgyJBvk82vQXlty6eMzThrgCkuDIz+ZEPJgSb9i5sCsbyTubncDLgUiE/29WcnV82bem80ZlfmTmEybM/6RFrr13e3NLyb3VpKi8393NXVunEpXNGdP/S1JGY+ODyZ4KN++8Oxmz1X7U1uNSOoS67oPiF5U9OPDHX5o7EpFkfnmfGWx6OhprHhGPWv9TFSa9LCbt9eStVR+7jFU+MOvEXJ4/E9+5Z4464Wu4xw623hMPtp0YM6Z9yddajCeH1Zn2renPe8MRyFyxeMPzkXp1NhomPrBwm4rGbLCN2ph2P9Yvp0ULTEifl8rSqSKbL6a6THa5qRXNtkhyu3y2fN+b///J0V7jirhVOLds5Qtj6RZYZG4RtBbBtjxC2B9ty2bbltizLKWzbaQrLAaBKSlySZV1RFF2WlSiyEpMkOYIsR5CVBkV1bZBk58dGUP/k/RevPKHX5/8PROIbQSOTgoIAAAAASUVORK5CYII=
